--- a/weatherService/style.css
+++ b/weatherService/style.css
@@ -1,11 +1,27 @@
-.weatherDataDiv{
-    font-size: 20px;
-    color: white;
-}
-
-.container{
+.container {
     display: flex;
-    .weatherDataDiv{
+
+    .weatherDataDiv {
         margin-left: 1%;
     }
+}
+
+.card {
+    padding: 10px;
+    margin-left: 20px;
+    width: 400px;
+    background-color: white;
+    border-radius: 10px;
+}
+
+.card-title {
+    font-size: 18px;
+    color: black;
+    font-weight: 550;
+}
+
+.description{
+    padding-top: 5px;
+    margin-left: 5px;
+    padding-bottom: 5px;
 }
